sticky game title z-index fix

--- a/src/app/pages/index.scss
+++ b/src/app/pages/index.scss
@@ -542,6 +542,16 @@
 
   }
 
+  .game {
+
+    .sticky {
+      position: fixed !important;
+      top: 0 !important;
+      bottom: auto !important;
+    }
+
+  }
+
   .game-feed {
 
 
